--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+accompanistSwiperefresh = "0.27.0"
 agp = "8.1.2"
 coilCompose = "2.5.0"
 converterScalars = "2.9.0"
@@ -17,8 +18,11 @@ okHttpLoggingInterceptor = "4.11.0"
 ksp = "1.9.10-1.0.13"
 navigation = "2.7.5"
 koin = "3.5.0"
+swiperefreshlayout = "1.1.0"
 
 [libraries]
+accompanist-swiperefresh = { module = "com.google.accompanist:accompanist-swiperefresh", version.ref = "accompanistSwiperefresh" }
+androidx-swiperefreshlayout = { module = "androidx.swiperefreshlayout:swiperefreshlayout", version.ref = "swiperefreshlayout" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 converter-scalars = { module = "com.squareup.retrofit2:converter-scalars", version.ref = "converterScalars" }
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
